--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body{
     -ms-user-select: none;
     /*background:linear-gradient(180deg, #eee 0%, #fff 100%);*/
     background:linear-gradient(180deg, #000 0%, #333 100%);
+    font-family: verdana, sans-serif;
+    font-size:0.9vw;
 }
 
 .instruments-container{
